@@ -12,20 +12,46 @@ The initial game starts with 4 X’s in the bottom left corner and 4 O’s in th
 
 <hr>
 
-### Installation
+### Installation (IntelliJ)
 To get started, please install the latest version of the Java Development Kit (JDK) and please install a Java IDE such as <a href="https://www.jetbrains.com/idea/">IntelliJ</a>. Please note that the deployment instructions below use IntelliJ as the IDE.
 
 <hr>
 
-### Deployment
+### Deployment (IntelliJ)
 1. Clone the repository through Git by running the following command:<br>
-`git clone https://github.com/ahnjedid/Adjacency-Strategy-Game.git`, or simply download the repository.
+`git clone https://github.com/GAIB20/adversarial-adjacency-strategy-game.git`, or simply download the repository.
 2. Open the repository folder through IntelliJ.
 3. Set up the JDK by going to File -> Project Structure -> Project tab. In the Project tab, go to Project SDK, click New, and browse to the location of your JDK folder.
 4. NOTE: JavaFX has been removed starting from JDK 11, and it is now a standalone module. The JavaFX files needed to set up the Adjacency program are located in the repository folder itself. To set it up, go to File -> Project Structure -> Libraries tab.  In the Libraries tab, press the + button, browse to the "javafx-sdk/lib" folder in the repository, and add it to the list of libraries.
 5. IMPORTANT: Go to Run -> Edit Configurations, and go to the VM options. In this line, please add in the full path to the lib folder of the javafx-sdk folder on your own computer, and then add the following line <br> `--add-modules=javafx.controls,javafx.fxml`.<br><br> 
 For example, I added the following line to my VM options: `--module-path "C:\Jed's Work\CS Side Projects\Adjacency-Strategy-Game\javafx-sdk\lib" --add-modules=javafx.controls,javafx.fxml`
 6. Open the Main class in the IntelliJ file interface.
+
+<hr>
+
+### Deployment (Linux / WSL Windows 11 without IntelliJ)
+Seharusnya bisa untuk windows non wsl jg (untested), dengan cara skip poin 2, dan ubah semua `/` di command jadi `\`
+
+0. Make sure you have JDK 11 installed
+1. Clone the repo and cd to the folder
+```
+git clone https://github.com/GAIB20/adversarial-adjacency-strategy-game.git
+cd adversarial-adjacency-strategy-game
+```
+2. Download JavaFX linux version
+```
+wget https://download2.gluonhq.com/openjfx/11.0.2/openjfx-11.0.2_linux-x64_bin-sdk.zip
+unzip openjfx-11.0.2_linux-x64_bin-sdk.zip
+mv javafx-sdk-11.0.2 javafx-sdk-linux
+```
+3. Compile the program
+```
+javac -cp ./src --module-path "./javafx-sdk-linux/lib" --add-modules=javafx.controls,javafx.fxml src/*.java
+```
+4. Run the program
+```
+java -cp ./src --module-path "./javafx-sdk-linux/lib" --add-modules=javafx.controls,javafx.fxml Main
+```
 
 <hr>
 
